k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uri-shortener-deployment
spec:
  replicas: 2  # Number of replicas
  selector:
    matchLabels:
      app: uri-shortener
  template:
    metadata:
      labels:
        app: uri-shortener
    spec:
      containers:
      - name: uri-shortener
        image: uri-shortener:latest
        ports:
        - containerPort: 5000  # The port the app runs on
