k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uri-shortener-service
spec:
  type: LoadBalancer  # Exposes the service externally using a CSP's loadbalancer
  selector:
    app: uri-shortener
  ports:
    - protocol: TCP
      port: 80  # External port
      targetPort: 5000  # Internal port
